--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -4,9 +4,14 @@
 {% block title %}Client | {{app_name}} {% endblock %}
 
 {% block body %}
+<ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="{{ path('home') }}">Home</a></li>
+    <li class="breadcrumb-item"><a href="{{ path('articles') }}">Shop</a></li>
+    <li class="breadcrumb-item active">Cart</li>
+</ol>
 <section>
     <div class="container">
-        <div class="row mt-3">
+        <div class="row my-5">
                 {% include "client/nav.html.twig" %}
             <div class="col-lg-8">
                 <div class="card">
