--- a/templates/leSekoya/cart/index.html.twig
+++ b/templates/leSekoya/cart/index.html.twig
@@ -1,4 +1,5 @@
 {% import "macros/search.html.twig" as search %}
+{% import "macros/alertes.html.twig" as alert %}
 
 {% extends "leSekoya/base.html.twig" %}
 
@@ -6,15 +7,12 @@
 {% block title %}Cart {% endblock %}
 
 {% block body %}
-{% for item in app.flashes('success') %}
-  <div class="alert alert-success">
-      <p>{{item}}</p>
-  </div>
-{% endfor %}
+
 <style>
   .loader{
     display:none;
   }
+
 </style>
 <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="{{ path('home') }}">Home</a></li>
@@ -25,150 +23,176 @@
 
   <!--================Cart Area =================-->
   <section class="cart_area">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-12">
-                <table class="table table-responsive">
-                    <thead>
-                        <tr>
-                            <th scope="col">Product</th>
-                            <th scope="col">Price</th>
-                            <th scope="col">Quantity</th>
-                            <th scope="col">Total</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for item in items %}
-                        <tr>
-                            <td width="30%">
-                                <div class="media">
-                                    <div class="d-flex">
-                                        {% for item in item.article.images|slice(0,1) %}
-                                          <img src="{{ asset('img/article/' ~ item.name) }}" width="100px" alt="">
-                                        {% else %}
-                                          <img src="{{ asset('img/vide.png') }}" alt="">
-                                        {% endfor %}
-                                    </div>
-                                    <div class="media-body">
-                                        <p>{{ item.article.title }}</p>
-                                    </div>
-                                </div>
-                            </td>
-                            <td width="20%">
-                                <h5>{{ item.article.price|number_format(2,'.',' ') }} {{ site.current}} </h5>
-                            </td>
-                            <td width="30%">
-                                <form class="form-row" action="" method="post">
-                                  <div class="form-group col-3">
-                                    <input type="hidden" name="article_id" value="{{ item.article.id }}">
-                                    <input type="number" class="form-control" min="1" max="{{ item.article.quantity }}" name="qty" value="{{ item.quantite }}" >
-                                    <small id="helpId" class="text-muted">En Stock: {{ item.article.quantity  }} </small>
-                                  </div>
-                                  <div class="form-group col-2">
-                                    <button type="submit" class="btn btn-primary ml-1">
-                                      Appliquer
-                                    </button>
-                                  </div>
-                                </form>
-                            </td>
-                            <td>
-                                <h5>{{ (item.article.price * item.quantite) | number_format(2,'.',' ') ~ ' ' ~ site.current }}</h5>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                        <tr>
-                            <td colspan="3" >
-                                <h5 class="float-right">Subtotal</h5>
-                            </td>
-                            <td>
-                               <h5>
-                                 {{ total|number_format(2,'.',' ') }} {{ site.current }}
-                               </h5> 
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-              </div>
-              <div class="col-12">
-                <form id="shipping-amount" method="POST" action="{{ path('order_client_new') }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-                  <div class="row">
-                    <div class="col-lg-4 offset-4">
-                      <p class="h4">Methode de paiment</p>
-                    <ul>
-                        <li class="filter-list">
-                          <input class="pixel-radio" value="Payment à la livraison" checked type="radio" name="method">
-                          <label for="men">Payment à la livraion</label>
-                        </li>
-                        <li class="filter-list">
-                          <input class="pixel-radio" value="Orange Money" type="radio" name="method">
-                          <label for="men">Orange Money</label>
-                        </li>
-                        <li class="filter-list">
-                          <input class="pixel-radio" value="Wave" type="radio" name="method">
-                          <label for="men">Wave</label>
-                        </li>
-                    </ul>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="row">
-                          <div class="col-lg-12">
-                            <p class="h4">Adress de livraison</p>
-                            {# {{ form_start(form_delivery_space)}}
-                            {{ form_widget(form_delivery_space)}}
-                            {{ form_end(form_delivery_space)}} #}
-                                <div class="shipping_box">
-                                  <div class="form-group loader-city">
-                                    <select class="custom-select" name="city" id="select-city">
-                                      {% for item in cities %}
-                                      <option name="city" value="{{ item.id}}">{{ item.name }}</option>
-                                      {% endfor %}
-                                    </select>
-                                  </div>
-                                  <div class="form-group">
-                                    <div id="loader-select-street" class="text-center loader">
-                                      <i class="fas fa-2x fa-sync-alt fa-spin"></i>
-                                    </div>
-                                      <div id="js-select-street">
-                                        <select required class="custom-select select-street" id="streets" name="street">
-                                          <option value="">Choisir le lieu de livraison</option>
-                                          {% for item in streets %}
-                                          <option value="{{ item.id }}">{{ item.name }}</option>
-                                          {% endfor %}
-                                        </select>
-                                      </div>
-                                  </div>
-                                  <div class="card border-0">
-                                    <div id="loader-street-amount" class="text-center loader">
-                                      <i class="fas fa-2x fa-sync-alt fa-spin"></i>
-                                    </div>
-                                    <div class="card-body  js-amount"></div>
-                                    <h3>Total : <span id="total"></span> </h3>
-                                  </div>
-                                </div>
+    <div class="container div-primary">
+    {% for item in app.flashes('success') %}
+      {{ alert.alert(item,'success')}}
+    {% endfor %}
+    {% if app.request.session.get('panier') %}
+      <!-- cart -->
+      <div class="row">
+        <div class="col-lg-12">
+          <table class="table">
+              <thead>
+                  <tr>
+                      <th scope="col">Product</th>
+                      <th scope="col">Price</th>
+                      <th scope="col">Quantity</th>
+                      <th scope="col">Total</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  {% for item in items %}
+                  <tr>
+                      <td width="30%">
+                          <div class="media">
+                              <div class="d-flex">
+                                  {% for item in item.article.images|slice(0,1) %}
+                                    <img src="{{ asset('img/article/' ~ item.name) }}" width="100px" alt="">
+                                  {% else %}
+                                    <img src="{{ asset('img/vide.png') }}" alt="">
+                                  {% endfor %}
+                              </div>
+                              <div class="media-body">
+                                  <p>{{ item.article.title }}</p>
+                              </div>
                           </div>
-                          <div class="col-lg-12">
-                            <div class="row">
-                              <div class="col text-center mb-2">
-                                  <a class="gray_btn btn-primary w-100" href="{{ path('articles') }}">Continue Shopping</a>
+                      </td>
+                      <td width="20%">
+                          <h5>{{ item.article.price|number_format(2,'.',' ') }} {{ site.current}} </h5>
+                      </td>
+                      <td width="30%">
+                          <form class="form-row" action="" method="post">
+                            <div class="form-group col-3">
+                              <input type="hidden" name="article_id" value="{{ item.article.id }}">
+                              <input type="number" class="form-control" min="1" max="{{ item.article.quantity }}" name="qty" value="{{ item.quantite }}" >
+                              <small id="helpId" class="text-muted">En Stock: {{ item.article.quantity  }} </small>
+                            </div>
+                            <div class="form-group col-2">
+                              <button type="submit" class="btn btn-primary ml-1">
+                                Appliquer
+                              </button>
+                            </div>
+                          </form>
+                      </td>
+                      <td>
+                          <h5>{{ (item.article.price * item.quantite) | number_format(2,'.',' ') ~ ' ' ~ site.current }}</h5>
+                      </td>
+                  </tr>
+                  {% endfor %}
+                  <tr>
+                      <td colspan="3" >
+                          <h5 class="float-right">Subtotal</h5>
+                      </td>
+                      <td>
+                          <h5>
+                            {{ total|number_format(2,'.',' ') }} {{ site.current }}
+                          </h5> 
+                      </td>
+                  </tr>
+              </tbody>
+          </table>
+        </div>
+        <div class="col-lg-12">
+          <form id="shipping-amount" method="POST" action="{{ path('cart_step_1') }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+            <div class="row">
+              <div class="col-lg-4">
+                <p class="h4">Methode de paiment</p>
+              <ul>
+                  <li class="filter-list">
+                    <input class="pixel-radio" value="Payment à la livraison" checked type="radio" name="method">
+                    <label for="men">Payment à la livraion</label>
+                  </li>
+                  <li class="filter-list">
+                    <input class="pixel-radio" value="Orange Money" type="radio" name="method">
+                    <label for="men">Orange Money</label>
+                  </li>
+                  <li class="filter-list">
+                    <input class="pixel-radio" value="Wave" type="radio" name="method">
+                    <label for="men">Wave</label>
+                  </li>
+              </ul>
+              </div>
+              <div class="col-lg-4">
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <p class="h4">Adress de livraison</p>
+                      {# {{ form_start(form_delivery_space)}}
+                      {{ form_widget(form_delivery_space)}}
+                      {{ form_end(form_delivery_space)}} #}
+                      
+                          <div class="shipping_box">
+                            <div class="form-group loader-city">
+                              <select class="custom-select" name="city" id="select-city">
+                                {% for item in cities %}
+                                <option name="city" value="{{ item.id}}">{{ item.name }}</option>
+                                {% endfor %}
+                              </select>
+                            </div>
+                            <div class="form-group">
+                              <div id="loader-select-street" class="text-center loader">
+                                <i class="fas fa-2x fa-sync-alt fa-spin"></i>
                               </div>
-                              {% if is_granted('ROLE_CLIENT') %}
-                              <div class="col">
-                                <button type="sumbit" class="btn btn-warning w-100">Proceed to checkout</button>
+                              <div id="js-select-street">
+                                <select required class="custom-select select-street" id="streets" name="street">
+                                  <option value="">Choisir le lieu de livraison</option>
+                                  {% for item in streets %}
+                                  <option value="{{ item.id }}">{{ item.name }}</option>
+                                  {% endfor %}
+                                </select>
                               </div>
-                              {% else %}
-                                <div class="col-lg-12">
-                                  <p class="h4">Connecter vous ou creer un compte pour commander</p>
-                                </div>
-                              {% endif %}
+                            </div>
+                            <div class="card border-0">
+                              <div id="loader-street-amount" class="text-center loader">
+                                <i class="fas fa-2x fa-sync-alt fa-spin"></i>
+                              </div>
+                              <div class="card-body  js-amount"></div>
+                              <h3>Total : <span id="total"></span> </h3>
                             </div>
                           </div>
+                    </div>
+                    <div class="col-lg-12">
+                      <div class="row">
+                        <div class="col text-center mb-2">
+                            <a class="gray_btn btn-primary w-100" href="{{ path('articles') }}">Continue Shopping</a>
                         </div>
+                        <div class="col-12">
+                          <button type="sumbit" class="btn btn-warning w-100">Proceed to checkout</button>
+                        </div>
+                          <div class="col-lg-12">
+                            <p class="h4">Connecter vous ou creer un compte pour commander</p>
+                          </div>
+                      </div>
                     </div>
                   </div>
-                </form>
               </div>
-          </div>
+            </div>
+          </form>
+        </div>
       </div>
+    {% else %}
+      <!-- empty shiipin cart --> 
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="card">
+        <div class="card-body text-center">
+            <a class="btn bg-primary bnt-primary p-5 rounded-circle" href="#">
+              <i class="fa fa-cart-arrow-down fa-4x" aria-hidden="true"></i>
+            </a>
+            <h3>{{'Empty cart'|trans }}</h3>
+            <p>Ajouter au moins un article au panier</p>
+            <a href="{{ path('articles') }}" class="btn btn-primary mt-2 w-100">View All products</a>
+        </div>
+      </div>
+        </div>
+      </div>
+    {% endif %}
+      <!-- receent article -->
+      <div class="row">
+        <div class="col-lg-12 my-5">
+          <h3 class="text-center">Ces articles vous intersses ?</h3>
+        </div>
+      </div>
+    </div>
   </section>
   <!--================End Cart Area =================-->
 {% endblock %}
@@ -176,7 +200,8 @@
 {% block javascripts %}
 <script>
   $(document).ready(function(){
-    $('#total').text(total())
+  $('#total').text(total())
+
     function total(val = 0){
       let total = {{total }} + val ;
       return total
@@ -225,7 +250,7 @@
           $('#loader-street-amount').hide()
           $('#total').text(total(data.amount))
 
-          console.log(data.amount)
+          // console.log(data.amount)
         }
       })
     })
