--- a/templates/leSekoya/cart/order-step-1.html.twig
+++ b/templates/leSekoya/cart/order-step-1.html.twig
@@ -13,8 +13,8 @@
 
   <section class="cart_areax">
     <form action="" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
-      <div class="container">
-          <div class="row bg-white mt-2 pb-5 rounded">
+      <div class="container mb-5 ">
+          <div class="row div-primary bg-white pb-5 rounded">
             <div class="col-12">
                 <table class="table">
                     <thead>
