--- a/templates/leSekoya/shop/index.html.twig
+++ b/templates/leSekoya/shop/index.html.twig
@@ -299,10 +299,8 @@
 {% block javascripts %}
 <script>
   $(document).ready(function(){
-   $(document).on('click','.category',function(){
-     let id = $(this).data(id);
-     console.log(id);
-   })
+   //active shop
+   $('#shop').addClass('active')
   })
 </script>
 {% endblock %}
