--- a/templates/leSekoya/shop/show.html.twig
+++ b/templates/leSekoya/shop/show.html.twig
@@ -15,14 +15,11 @@
 			<div class="row s_product_inner">
 				<div class="col-lg-6">
 					<div class="owl-carousel owl-theme s_Product_carousel">
+						{% for item in article.images|slice(0,1) %}
 						<div class="single-prd-item">
-<img class="img-fluid" src="{{ asset('aroma/img/category/s-p1.jpg') }}" alt="{{ article.title }}">						</div>
-						 <div class="single-prd-item">
-							<img class="img-fluid" src="img/category/s-p1.jpg" alt="">
+							<img class="img-fluid" src="{{ asset('img/article/' ~ item.name ) }}" alt="{{ article.title }}">
 						</div>
-						<div class="single-prd-item">
-							<img class="img-fluid" src="img/category/s-p1.jpg" alt="">
-						</div>
+						{% endfor %}
 					</div>
 				</div>
 				<div class="col-lg-5 offset-lg-1">
@@ -33,21 +30,33 @@
 							<li><a class="active" href="#"><span>Category</span> : {{ article.category.title }}</a></li>
 							<li><a href="#"><span>Availibility</span> : {{ article.quantity }} In Stock</a></li>
 						</ul>
-						<p>{{ article.description|nl2br }}.</p>
-						<div class="product_count">
-              <label for="qty">Quantity:</label>
-              <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
-							 class="increase items-count" type="button"><i class="ti-angle-left"></i></button>
-							<input min="1" max="{{ article.quantity }}" type="number" name="qty" id="sst" size="2" maxlength="12" value="1" title="Quantity:" class="input-text qty">
-							
-							<button  class="reduced items-count" type="button">
-								<i class="ti-angle-right"></i>
-							</button>
-							<a class="button primary-btn" href="#">Add to Cart</a>               
+						<p>{{ article.description|nl2br }}</p>
+						<div class="row">
+							<div class="col-lg-12 my-4">
+								<form class="form-row" action="{{ path('cart_index') }}" method="post">
+									<div class="form-group col-3">
+										<input type="hidden" name="article_id" value="{{ article.id }}">
+										<input type="number" class="form-control" min="1" max="{{ article.quantity }}" name="qty" value="1" >
+										<small id="helpId" class="text-muted">Stock: {{ article.quantity  }} </small>
+									</div>
+									<div class="form-group col-9">
+										<button type="submit" class="button primary-btn" name="card-add">
+											{{'Add to cart'|trans}} <i class="fa fa-cart-plus" aria-hidden="true"></i>
+										</button>
+									</div>
+								</form>
+							</div>
 						</div>
 						<div class="card_area d-flex align-items-center">
-							<a class="icon_btn" href="#"><i class="lnr lnr lnr-diamond"></i></a>
-							<a class="icon_btn" href="#"><i class="lnr lnr lnr-heart"></i></a>
+							<a class="icon_btn" href="#">
+								<i class="fa fa-heart" aria-hidden="true"></i>
+							</a>
+							<a class="icon_btn" href="#">
+								<i class="fas fa-copy    "></i>
+							</a>
+							<a class="icon_btn" href="#">
+								<i class="fa fa-share" aria-hidden="true"></i>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -61,149 +70,66 @@
 		<div class="container">
 			<ul class="nav nav-tabs" id="myTab" role="tablist">
 				<li class="nav-item">
-					<a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Description</a>
+					<a class="nav-link" id="description-tab" data-toggle="tab" href="#description" role="tab" aria-controls="description" aria-selected="true">Description</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+					<a class="nav-link active" id="specification-tab" data-toggle="tab" href="#specification" role="tab" aria-controls="specification"
 					 aria-selected="false">Specification</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact"
+					<a class="nav-link" id="comment-tab" data-toggle="tab" href="#comment" role="tab" aria-controls="comment"
 					 aria-selected="false">Comments</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link active" id="review-tab" data-toggle="tab" href="#review" role="tab" aria-controls="review"
+					<a class="nav-link" id="review-tab" data-toggle="tab" href="#review" role="tab" aria-controls="review"
 					 aria-selected="false">Reviews</a>
 				</li>
 			</ul>
 			<div class="tab-content" id="myTabContent">
-				<div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
-					<p>Beryl Cook is one of Britain’s most talented and amusing artists .Beryl’s pictures feature women of all shapes
-						and sizes enjoying themselves .Born between the two world wars, Beryl Cook eventually left Kendrick School in
-						Reading at the age of 15, where she went to secretarial school and then into an insurance office. After moving to
-						London and then Hampton, she eventually married her next door neighbour from Reading, John Cook. He was an
-						officer in the Merchant Navy and after he left the sea in 1956, they bought a pub for a year before John took a
-						job in Southern Rhodesia with a motor company. Beryl bought their young son a box of watercolours, and when
-						showing him how to use it, she decided that she herself quite enjoyed painting. John subsequently bought her a
-						child’s painting set for her birthday and it was with this that she produced her first significant work, a
-						half-length portrait of a dark-skinned lady with a vacant expression and large drooping breasts. It was aptly
-						named ‘Hangover’ by Beryl’s husband and</p>
-					<p>It is often frustrating to attempt to plan meals that are designed for one. Despite this fact, we are seeing
-						more and more recipe books and Internet websites that are dedicated to the act of cooking for one. Divorce and
-						the death of spouses or grown children leaving for college are all reasons that someone accustomed to cooking for
-						more than one would suddenly need to learn how to adjust all the cooking practices utilized before into a
-						streamlined plan of cooking that is more efficient for one person creating less</p>
+				<div class="tab-pane fade" id="description" role="tabpanel" aria-labelledby="description-tab">
+					{{ article.description }}
 				</div>
-				<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+				<div class="tab-pane fade show active" id="specification" role="tabpanel" aria-labelledby="specification-tab">
 					<div class="table-responsive">
 						<table class="table">
 							<tbody>
+								{% for item in article.options %}
 								<tr>
 									<td>
-										<h5>Width</h5>
+										<h5>{{ item.title }} </h5>
 									</td>
 									<td>
-										<h5>128mm</h5>
+										<h5>{{ item.content }}</h5>
 									</td>
 								</tr>
-								<tr>
-									<td>
-										<h5>Height</h5>
-									</td>
-									<td>
-										<h5>508mm</h5>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<h5>Depth</h5>
-									</td>
-									<td>
-										<h5>85mm</h5>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<h5>Weight</h5>
-									</td>
-									<td>
-										<h5>52gm</h5>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<h5>Quality checking</h5>
-									</td>
-									<td>
-										<h5>yes</h5>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<h5>Freshness Duration</h5>
-									</td>
-									<td>
-										<h5>03days</h5>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<h5>When packeting</h5>
-									</td>
-									<td>
-										<h5>Without touch of hand</h5>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<h5>Each Box contains</h5>
-									</td>
-									<td>
-										<h5>60pcs</h5>
-									</td>
-								</tr>
+								{% endfor %}
 							</tbody>
 						</table>
 					</div>
 				</div>
-				<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+				<div class="tab-pane fade" id="comment" role="tabpanel" aria-labelledby="comment-tab">
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="comment_list">
+								{% for item in article.comments %}
 								<div class="review_item">
 									<div class="media">
 										<div class="d-flex">
-											<img src="img/product/review-1.png" alt="">
+											<img src="{{ asset('img/product/review-1.png') }}" alt="">
 										</div>
 										<div class="media-body">
-											<h4>Blake Ruiz</h4>
-											<h5>12th Feb, 2018 at 05:56 pm</h5>
+											<h4>{{ item.user.personne.firstName ~ ' ' ~ item.user.personne.lastName }}</h4>
+											<h5>{{ item.createdAt|date_format_fr }} </h5>
 											<a class="reply_btn" href="#">Reply</a>
 										</div>
 									</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-										dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-										commodo</p>
+									<p>{{ item.content }}</p>
 								</div>
+								{% endfor %}
 								<div class="review_item reply">
 									<div class="media">
 										<div class="d-flex">
-											<img src="img/product/review-2.png" alt="">
-										</div>
-										<div class="media-body">
-											<h4>Blake Ruiz</h4>
-											<h5>12th Feb, 2018 at 05:56 pm</h5>
-											<a class="reply_btn" href="#">Reply</a>
-										</div>
-									</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-										dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-										commodo</p>
-								</div>
-								<div class="review_item">
-									<div class="media">
-										<div class="d-flex">
-											<img src="img/product/review-3.png" alt="">
+											<img src="{{ asset('img/product/review-2.png') }}" alt="">
 										</div>
 										<div class="media-body">
 											<h4>Blake Ruiz</h4>
@@ -249,7 +175,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="tab-pane fade show active" id="review" role="tabpanel" aria-labelledby="review-tab">
+				<div class="tab-pane fade" id="review" role="tabpanel" aria-labelledby="review-tab">
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="row total_rate">
@@ -300,7 +226,7 @@
 								<div class="review_item">
 									<div class="media">
 										<div class="d-flex">
-											<img src="img/product/review-2.png" alt="">
+											<img src="{{ asset('img/product/review-2.png') }}" alt="">
 										</div>
 										<div class="media-body">
 											<h4>Blake Ruiz</h4>
@@ -318,7 +244,7 @@
 								<div class="review_item">
 									<div class="media">
 										<div class="d-flex">
-											<img src="img/product/review-3.png" alt="">
+											<img src="{{ asset('img/product/review-3.png') }}" alt="">
 										</div>
 										<div class="media-body">
 											<h4>Blake Ruiz</h4>
@@ -347,23 +273,23 @@
 									<li><a href="#"><i class="fa fa-star"></i></a></li>
 								</ul>
 								<p>Outstanding</p>
-                <form action="#/" class="form-contact form-review mt-3">
-                  <div class="form-group">
-                    <input class="form-control" name="name" type="text" placeholder="Enter your name" required>
-                  </div>
-                  <div class="form-group">
-                    <input class="form-control" name="email" type="email" placeholder="Enter email address" required>
-                  </div>
-                  <div class="form-group">
-                    <input class="form-control" name="subject" type="text" placeholder="Enter Subject">
-                  </div>
-                  <div class="form-group">
-                    <textarea class="form-control different-control w-100" name="textarea" id="textarea" cols="30" rows="5" placeholder="Enter Message"></textarea>
-                  </div>
-                  <div class="form-group text-center text-md-right mt-3">
-                    <button type="submit" class="button button--active button-review">Submit Now</button>
-                  </div>
-                </form>
+								<form action="#/" class="form-contact form-review mt-3">
+									<div class="form-group">
+										<input class="form-control" name="name" type="text" placeholder="Enter your name" required>
+									</div>
+									<div class="form-group">
+										<input class="form-control" name="email" type="email" placeholder="Enter email address" required>
+									</div>
+									<div class="form-group">
+										<input class="form-control" name="subject" type="text" placeholder="Enter Subject">
+									</div>
+									<div class="form-group">
+										<textarea class="form-control different-control w-100" name="textarea" id="textarea" cols="30" rows="5" placeholder="Enter Message"></textarea>
+									</div>
+									<div class="form-group text-center text-md-right mt-3">
+										<button type="submit" class="button button--active button-review">Submit Now</button>
+									</div>
+								</form>
 							</div>
 						</div>
 					</div>
