--- a/templates/client/order/ajax/amount.html.twig
+++ b/templates/client/order/ajax/amount.html.twig
@@ -1,2 +1,2 @@
 <p>Montant de la livraison</p>
-<p class="h3">{{ amount|number_format(2,'.',' ') }} {{ site.current }}</p> 
+<p class="h5">{{ street.shippingAmount.amount|number_format(2,'.',' ') }} {{ site.current }}</p> 
