--- a/templates/leSekoya/cart/index.html.twig
+++ b/templates/leSekoya/cart/index.html.twig
@@ -58,7 +58,7 @@
                           </div>
                       </td>
                       <td width="20%">
-                          <h5>{{ item.article.price|number_format(2,'.',' ') }} {{ site.current}} </h5>
+                          {{ item.article.price|number_format(2,'.',' ') }} {{ site.current}}
                       </td>
                       <td width="30%">
                           <form class="form-row" action="" method="post">
@@ -93,7 +93,7 @@
           </table>
         </div>
         <div class="col-lg-12">
-          <form id="shipping-amount" method="POST" action="{{ path('cart_step_1') }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+          <form id="shipping-amount" method="POST" action="{{ path('cart_step_1') }}">
             <div class="row">
               <div class="col-lg-4">
                 <p class="h4">Methode de paiment</p>
@@ -116,10 +116,41 @@
                   <div class="row">
                     <div class="col-lg-12">
                       <p class="h4">Adress de livraison</p>
-                      {# {{ form_start(form_delivery_space)}}
-                      {{ form_widget(form_delivery_space)}}
-                      {{ form_end(form_delivery_space)}} #}
-                      
+                          {% if app.request.session.get('shipping') %}
+                          {% set delivery = app.request.session.get('shipping') %}
+                          <div class="shipping_box">
+                            <div class="form-group loader-city">
+                              <select class="custom-select" name="city" id="select-city">
+                                {% for item in cities %}
+                                <option name="city" value="{{ item.id}}">{{ item.name }}</option>
+                                {% endfor %}
+                              </select>
+                            </div>
+                            <div class="form-group">
+                              <div id="loader-select-street" class="text-center loader">
+                                <i class="fas fa-2x fa-sync-alt fa-spin"></i>
+                              </div>
+                              <div id="js-select-street">
+                                <select required class="custom-select select-street" id="streets" name="street">
+                                  <option value="">Choisir le lieu de livraison</option>
+                                  <option selected value="{{ delivery.id }}">{{ delivery.name }}</option>
+                                  {% for item in streets %}
+                                  <option value="{{ item.id }}">{{ item.name }}</option>
+                                  {% endfor %}
+                                </select>
+                              </div>
+                            </div>
+                            <div class="card border-0">
+                              <div id="loader-street-amount" class="text-center loader">
+                                <i class="fas fa-2x fa-sync-alt fa-spin"></i>
+                              </div>
+                              <div class="card-body  js-amount">
+                                <p>Montant de la livraison</p>
+                                <p class="h5">{{ delivery.shippingAmount.amount|number_format(2,'.',' ') }} {{ site.current }}</p> 
+                              </div>
+                            </div>
+                          </div>
+                          {% else %}
                           <div class="shipping_box">
                             <div class="form-group loader-city">
                               <select class="custom-select" name="city" id="select-city">
@@ -146,24 +177,28 @@
                                 <i class="fas fa-2x fa-sync-alt fa-spin"></i>
                               </div>
                               <div class="card-body  js-amount"></div>
-                              <h3>Total : <span id="total"></span> </h3>
+                              <p class="h4">Total : <span id="total"></span> </p>
                             </div>
                           </div>
-                    </div>
-                    <div class="col-lg-12">
-                      <div class="row">
-                        <div class="col text-center mb-2">
-                            <a class="gray_btn btn-primary w-100" href="{{ path('articles') }}">Continue Shopping</a>
-                        </div>
-                        <div class="col-12">
-                          <button type="sumbit" class="btn btn-warning w-100">Proceed to checkout</button>
-                        </div>
-                          <div class="col-lg-12">
-                            <p class="h4">Connecter vous ou creer un compte pour commander</p>
-                          </div>
-                      </div>
+                          {% endif %}
                     </div>
                   </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="row">
+                <div class="col-lg-12">
+                    <h5>Total : <span class="text-danger" id="total"> {{ (total + delivery.shippingAmount.amount)|number_format(2,'.',' ') }} {{ site.current }} </span> </h5>
+                </div>
+                  <div class="col text-center mb-2">
+                      <a class="gray_btn btn-primary w-100" href="{{ path('articles') }}">Continue Shopping</a>
+                  </div>
+                  <div class="col-12">
+                    <button type="sumbit" class="btn btn-warning w-100">Vérifier la commande</button>
+                  </div>
+                    <div class="col-lg-12">
+                      <p class="h4">Connecter vous ou creer un compte pour commander</p>
+                    </div>
+                </div>
               </div>
             </div>
           </form>
@@ -189,18 +224,29 @@
       <!-- receent article -->
       <div class="row">
         <div class="col-lg-12 my-5">
-          <h3 class="text-center">Ces articles vous intersses ?</h3>
+          <h3 class="text-center"></h3>
         </div>
       </div>
     </div>
   </section>
   <!--================End Cart Area =================-->
+      <section class="section-margin calc-60px">
+      <div class="container">
+        <div class="section-intro pb-60px">
+          <h2>Ces articles vous intersses ?</h2>
+        </div>
+        <div class="owl-carousel owl-theme" id="bestSellerCarousel">
+          {% for item in rand_articles %}
+              {{ include ('leSekoya/shop/_article.html.twig',{class:'col-xl-3'}) }}  
+          {% endfor %}
+        </div>
+      </div>
+    </section>
 {% endblock %}
 
 {% block javascripts %}
 <script>
   $(document).ready(function(){
-  $('#total').text(total())
 
     function total(val = 0){
       let total = {{total }} + val ;
@@ -248,7 +294,7 @@
         success:function(data){
           $('.js-amount').html(data.response).show()
           $('#loader-street-amount').hide()
-          $('#total').text(total(data.amount))
+          $('#total').text(total(data.amount).number_format(2,'.',''))
 
           // console.log(data.amount)
         }
