--- a/templates/leSekoya/cart/order-step-1.html.twig
+++ b/templates/leSekoya/cart/order-step-1.html.twig
@@ -12,9 +12,10 @@
 <main class="site-main">
 
   <section class="cart_areax">
-    <form action="" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
+    <form action="{{ path('order_client_new') }}" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
       <div class="container mb-5 ">
           <div class="row div-primary bg-white pb-5 rounded">
+            
             <div class="col-12">
                 <table class="table">
                     <thead>
@@ -32,7 +33,7 @@
                                 {{ item.article.title }}
                             </td>
                             <td>
-                                <h5>{{ item.article.price|number_format(2,'.',' ') }} {{ site.current}} </h5>
+                                <p>{{ item.article.price|number_format(2,'.',' ') }} {{ site.current}} </p>
                             </td>
                             <td>
                                 {{ item.quantite }}
@@ -49,7 +50,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <p class="h4">Methode de payment:</p>
-                        <p>{{ methodPayment }}</p>
+                        <p>{{app.request.session.get('methodPayment') }}</p>
                     </div>
                     <div class="col-6">
                         <table class="table">
@@ -57,7 +58,7 @@
                                 <tr>
                             <td colspan="2"></td>
                             <td>
-                                <h5>Subtotal</h5>
+                                Subtotal
                             </td>
                             <td>
                                 {{ subtotal|number_format(2,'.',' ') }} {{ site.current }}
@@ -66,11 +67,13 @@
                         <tr>
                             <td colspan="2"></td>
                             <td>
-                                <h5>Montant de la livraion</h5>
+                                Montant de la livraion
                             </td>
                             <td>
-                                <input type="hidden" name="shipping_amount" value="{{ shippingAmount }}">
-                                {{ shippingAmount|number_format(2,'.',' ') }} {{ site.current }}
+                            {% if app.request.session.get('shipping') %}
+                                <input type="hidden" name="shipping_amount" value="{{ street.shippingAmount.amount }}">
+                               <p>{{ street.shippingAmount.amount|number_format(2,'.',' ') }} {{ site.current }} </p>
+                            {% endif %}
                             </td>
                         </tr>
                         <tr>
@@ -79,8 +82,8 @@
                                 <h5>Total</h5>
                             </td>
                             <td>
-                                <input type="hidden" name="total"  value="{{ (shippingAmount + subtotal) }}">
-                                {{ (shippingAmount + subtotal) |number_format(2,'.',' ') }} {{ site.current }}
+                                <input type="hidden" name="total"  value="{{ (street.shippingAmount.amount + subtotal) }}">
+                               <h5>{{ (street.shippingAmount.amount + subtotal) |number_format(2,'.',' ') }} {{ site.current }}</h5>
                             </td>
                         </tr>
                             </tbody>
@@ -97,7 +100,7 @@
                             </button>
                         {% else %}
                             Pour commander connecter vous ou creer un compte. :) 
-                            <a class="btn btn-primary" href="{{ path('app_login') }}">Connecter vous ou créer un compte</a>
+                            <a class="btn btn-primary btn-lg" href="{{ path('app_login') }}">Connecter vous ou créer un compte ci-dessous</a>
                         {% endif %}
                     </div>
                 </div>
@@ -105,6 +108,11 @@
           </div>
       </div>
     </form>
+    {% if is_granted('ROLE_CLIENT') is null %}
+    <div class="container mb-5">
+        {% include ("registration/_form.html.twig") %}
+    </div>
+    {% endif %}
   </section>
 </main>
 {% endblock %}
