--- a/templates/admin/order/_form.html.twig
+++ b/templates/admin/order/_form.html.twig
@@ -11,16 +11,16 @@
       {{ form_row(form.state)}}
     </div>
 
-    <div class="form-group col-4">
+    {# <div class="form-group col-4">
       {{ form_row(form.shipping_state)}}
-    </div>
-    <div class="form-group col-4">
+    </div> #}
+    {# <div class="form-group col-4">
       {{ form_row(form.shipping)}}
-    </div>
-    <div class="form-group col-4">
+    </div> #}
+    {# <div class="form-group col-4">
       {{ form_row(form.shipping_adress)}}
       <p><a href="{{ path('order_adress',{ id: order.user.id}) }}">Add or edit adress <i class="fas fa-pencil-alt text-success "></i> </a></p>
-    </div>
+    </div> #}
     <div class="form-group col-8">
       {{ form_row(form.note)}}
     </div>
